tests/neg/i16453.check
-- [E172] Type Error: tests/neg/i16453.scala:19:21 ---------------------------------------------------------------------
19 |  summon[Option[Int]] // error
   |                     ^
   |No given instance of type Option[Int] was found for parameter x of method summon in object Predef
   |
   |Note: implicit conversions are not automatically applied to arguments of using clauses. You will have to pass the argument explicitly.
   |The following conversions in scope can be converted to Option[Int]:
   |- given bar: Int
-- [E172] Type Error: tests/neg/i16453.scala:20:25 ---------------------------------------------------------------------
20 |  implicitly[Option[Int]] // error
   |                         ^
   |           No given instance of type Option[Int] was found for parameter e of method implicitly in object Predef
